# hello-haskell

./: .gitignore  CHANGELOG.md  default.nix  flake.nix  hello-haskell.cabal
app/: Main.hs
src/: HelloLib.hs
