cabal-version:      3.0
name:               hello-haskell
version:            0.1.0.0
synopsis:           A Haskell+Nix hello world

-- A longer description of the package.
-- description:
homepage:           https://github.com/ners/hello-haskell

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HelloLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable hello-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        hello-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hello-haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          HelloLibTest.hs
    build-depends:    base
